[package]
name = "mdbook-hints"
version = "0.1.3"
edition = "2021"
authors = ["caukub"]
license = "MIT"
license-file = "LICENSE"
description = "mdBook preprocessor to add hover hints to your book"
exclude = ["/assets", "/theme", "hints.toml", "README.md"]

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
markdown = "1.0.0-alpha.18"
mdbook = "0.4.40"
regex = "1.10.6"
semver = "1.0.23"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
