[package]
name = "mdbook-hints"
version = "0.1.5"
authors = ["caukub"]
edition = "2021"

description = "mdBook preprocessor to add hover hints to your book"
repository = "https://github.com/caukub/mdbook-hints/"
license = "MIT"
exclude = ["/assets", "/theme", "hints.toml", "README.md"]
keywords = ["mdbook", "preprocessor", "hints", "tooltip"]

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
markdown = "1.0.0-alpha.18"
mdbook = "0.4.40"
regex = "1.10.6"
semver = "1.0.23"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
